--- a/1.3/Languages/ChineseSimplified/DefInjected/ThingCategoryDef/ThingCategoryDef.xml
+++ b/1.3/Languages/ChineseSimplified/DefInjected/ThingCategoryDef/ThingCategoryDef.xml
@@ -2,6 +2,7 @@
 
 <LanguageData>
 
+	<ThingCategory_GunParts.label>武器部件</ThingCategory_GunParts.label>
 	<ThingCategory_ARGunParts.label>步枪配件</ThingCategory_ARGunParts.label>
 	<ThingCategory_SGGunParts.label>霰弹枪配件</ThingCategory_SGGunParts.label>
 	<ThingCategory_CRGunParts.label>电荷步枪配件</ThingCategory_CRGunParts.label>
