--- a/1.3/Languages/English/Keyed/String_Misc.xml
+++ b/1.3/Languages/English/Keyed/String_Misc.xml
@@ -32,4 +32,6 @@
 	<statMultiplierAffectHorizon>Stat Value Multiplier Affect Horizon</statMultiplierAffectHorizon>
 	<AttachmentPoint>Attachment Point</AttachmentPoint>
 	<setEmpty>Set Empty</setEmpty>
+	<apply>Apply</apply>
+	<ModifyWeapon>Modify Weapon</ModifyWeapon>
 </LanguageData>
