--- a/1.3/Languages/ChineseSimplified/DefInjected/ThingDef/MuzzleDevices.xml
+++ b/1.3/Languages/ChineseSimplified/DefInjected/ThingDef/MuzzleDevices.xml
@@ -11,4 +11,9 @@
 
 	<Module_MuzzleCompensator.label>补偿器</Module_MuzzleCompensator.label>
 	<Module_MuzzleCompensator.description>适合冲锋枪使用,对近距离作战在能够发挥最大效率</Module_MuzzleCompensator.description>
+
+	<Module_Bayonet.label>刺刀</Module_Bayonet.label>
+	<Module_Bayonet.description>可以增强步枪的近战能力,好让使用者在近战时不会那么尴尬</Module_Bayonet.description>
+	<Module_Bayonet.tools.0.label>刀刃</Module_Bayonet.tools.0.label>
+	<Module_Bayonet.tools.1.label>刀尖</Module_Bayonet.tools.1.label>
 </LanguageData>
